2006-04-11  Derek Price  <derek@ximbiot.com>

	* maint-aux/gnulib-update: Clarify output.

2006-04-10  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove now unneeded call to gl_GLOB and update comment
	to reflect new GNULIB file names.

	* HACKING: Document assumption of <stdint.h> via GNULIB.

2006-03-30  Mark D. Baushke  <mdb@gnu.org>

	* configure: Regenerated.

2006-03-28  Derek Price  <derek@ximbiot.com>

	[patch #4992]
	* NEWS: Note new --timeout option.

2006-03-19  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.in, aclocal.m4, config.h.in, configure: Regenerated.

2006-03-07  Derek Price  <derek@ximbiot.com>

	* NEWS: Note rtag fixes.

2006-02-26  Derek Price  <derek@ximbiot.com>

	* NEWS: Note CVSADM fix as an efficiency improvement.

2006-02-01  Derek Price  <derek@ximbiot.com>

	* NEWS: Note unconditional val-tags lock removal.

	* NEWS: Note history buffer overflow fix.

2006-01-30  Derek Price  <derek@ximbiot.com>

	* NEWS: Note nonblocking flow control pipe fix.

2005-12-09  Derek Price  <derek@ximbiot.com>

	* NEWS: Note misc doc & bug fixes.

2005-12-07  Derek Price  <derek@ximbiot.com>

	* NEWS: Note recognition of :extssh:.

2005-11-18  Derek Price  <derek@ximbiot.com>

	* cvs.spec.in (%files): Install PDFs, not PSs.
	(%changelog): Correct date to a format RPM accepts.

2005-11-15  Derek Price  <derek@ximbiot.com>

	* NEWS: Note s/P/U/g.

2005-11-14  Derek Price  <derek@ximbiot.com>

	* HACKING (Rebuilding YACC sources): Expound on Bison/YACC requirement.

2005-11-12  Mark D. Baushke  <mdb@gnu.org>

	* NEWS: Note new admin [--execute|--no-execute] options.

2005-11-09  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add build-aux/bison-missing.

2005-10-28  Derek Price  <derek@ximbiot.com>

	* NEWS: Note compression buffer fix.

2005-10-18  Derek Price  <derek@ximbiot.com>

	* KEYS: New file, suggested by Antoine Lexy-Lambert <antoine@gmx.de>.
	* README: Mention KEYS file.

2005-10-06  Derek Price  <derek@ximbiot.com>
